Bug 180931. If we move a frame temporarily during reflow, we'd better invalidate the whole overflow area because invalidates may have been issued at the temporary position.